Bug 776129 - Part 1: When an <iframe mozbrowser> calls window.open, the resulting frame must be OOP iff the opener frame is OOP. r=smaug

--HG--
extra : rebase_source : 14db2573db5e9d8ffb72798f3d856f98e49f8a83