dom/browser-element/BrowserElementParent.cpp
@@ -29,7 +29,7 @@ namespace {
  * aOpenerFrameElement.
  */
 already_AddRefed<nsHTMLIFrameElement>
-CreateIframe(Element* aOpenerFrameElement, const nsAString& aName)
+CreateIframe(Element* aOpenerFrameElement, const nsAString& aName, bool aRemote)
 {
   nsNodeInfoManager *nodeInfoManager =
     aOpenerFrameElement->OwnerDoc()->NodeInfoManager();
@@ -57,6 +57,12 @@ CreateIframe(Element* aOpenerFrameElement, const nsAString& aName)
   // Copy the window name onto the iframe.
   popupFrameElement->SetAttr(kNameSpaceID_None, nsGkAtoms::name,
                              aName, /* aNotify = */ false);
+
+  // Indicate whether the iframe is should be remote.
+  popupFrameElement->SetAttr(kNameSpaceID_None, nsGkAtoms::Remote,
+                             aRemote ? NS_LITERAL_STRING("true") :
+                                       NS_LITERAL_STRING("false"),
+                             /* aNotify = */ false);
 
   return popupFrameElement.forget();
 }
@@ -135,7 +141,7 @@ BrowserElementParent::OpenWindowOOP(mozilla::dom::TabParent* aOpenerTabParent,
     do_QueryInterface(aOpenerTabParent->GetOwnerElement());
   NS_ENSURE_TRUE(openerFrameElement, false);
   nsRefPtr<nsHTMLIFrameElement> popupFrameElement =
-    CreateIframe(openerFrameElement, aName);
+    CreateIframe(openerFrameElement, aName, /* aRemote = */ true);
 
   // Normally an <iframe> element will try to create a frameLoader when the
   // page touches iframe.contentWindow or sets iframe.src.
@@ -193,7 +199,7 @@ BrowserElementParent::OpenWindowInProcess(nsIDOMWindow* aOpenerWindow,
     do_QueryInterface(openerFrameDOMElement);
 
   nsRefPtr<nsHTMLIFrameElement> popupFrameElement =
-    CreateIframe(openerFrameElement, aName);
+    CreateIframe(openerFrameElement, aName, /* aRemote = */ false);
   NS_ENSURE_TRUE(popupFrameElement, false);
 
   nsCAutoString spec;
